# cpp-wxwidgets-camera

./: CMakeLists.txt  README.md  camera_app.cpp
